# dim-recording-viewer

./: README.md
dim/apps/recording_viewer/: app.yaml  main.js
dim/apps/recording_viewer/frontend/: index.html
dim/apps/recording_viewer/mapper/: Cargo.toml  flake.nix
dim/apps/recording_viewer/mapper/src/: main.rs
